--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <br>
 <h1>ANDREW'S SUPER AWESOME PORTFOLIO</h1>
 <div class="w3-content w3-section" style="max-width:1000px">
-  <img class="mySlides" src="1.jpg" style="width:100%">
+  <img class="mySlides" src="1.JPG" style="width:100%">
   <img class="mySlides" src="2.jpg" style="width:100%">
-  <img class="mySlides" src="3.jpg" style="width:100%">
+  <img class="mySlides" src="3.JPG" style="width:100%">
 </div>
 
  <script>
