--- a/Certifications.html
+++ b/Certifications.html
@@ -20,21 +20,21 @@
 <img src="ALS.png" height="700px" width="750px">
 <hr>
 <h2>OSHA 10</h2>
-<img src="Safe.jpg" height="700px" width="750px">
+<img src="Safe.JPG" height="700px" width="750px">
 <h2>Stepladder safety</h2>
-<img src="SLS.png" height="700px" width="750px">
+<img src="SLS.PNG" height="700px" width="750px">
 <hr>
 <h2>Workplace saftey: Lockout/Tagout</h2>
-<img src="WPS.png" height="700px" width="750px">
+<img src="WPS.PNG" height="700px" width="750px">
 <hr>
 <h2>Mobile ladder safety</h2>
-<img src="MLS.png" height="700px" width="750px">
+<img src="MLS.PNG" height="700px" width="750px">
 <hr>
 <h2>Single and Extension ladder safety</h2>
-<img src="SELS.png" height="700px" width="750px">
+<img src="SELS.PNG" height="700px" width="750px">
 <hr>
 <h2>Nocti Exam</h2>
-<img src="nocti.png" height="700px" width="750px">
+<img src="nocti.PNG" height="700px" width="750px">
 <hr>
 </center>
 </html>
