--- a/Certifications.html
+++ b/Certifications.html
@@ -17,10 +17,10 @@
 <h1>My Certifications</h1>
 
 <h2>Articulated ladder safety</h2>
-<img src="ALS.png" height="700px" width="750px">
+<img src="ALS.PNG" height="700px" width="750px">
 <hr>
 <h2>OSHA 10</h2>
-<img src="Safe.JPG" height="700px" width="750px">
+<img src="Safe.jpg" height="700px" width="750px">
 <h2>Stepladder safety</h2>
 <img src="SLS.PNG" height="700px" width="750px">
 <hr>
