--- a/Resume.html
+++ b/Resume.html
@@ -15,8 +15,8 @@
 <center>
 	<h1>My Resume</h1>
 	<center>
- <img src="prof.png">
-<a href="prof.pdf" download>
+ <img src="prof.PNG">
+<a href="prof.PDF" download>
 </center>
 <button>Download</button></a>
 
