--- a/Resume.html
+++ b/Resume.html
@@ -16,7 +16,7 @@
 	<h1>My Resume</h1>
 	<center>
  <img src="prof.PNG">
-<a href="prof.PDF" download>
+<a href="prof.pdf" download>
 </center>
 <button>Download</button></a>
 
