--- a/Resume.html
+++ b/Resume.html
@@ -19,6 +19,7 @@
 <a href="prof.pdf" download>
 </center>
 <button>Download</button></a>
-
+<h1>Career plan</h1>
+<img src="Capture.PNG">
  </center>
 </html>
