--- a/Resume.html
+++ b/Resume.html
@@ -20,6 +20,7 @@
 </center>
 <button>Download</button></a>
 <h1>Career plan</h1>
-<img src="Capture.PNG">
+<img src="Capture.PNG" height="500px" width="750px">>
+
  </center>
 </html>
