--- a/boop.html
+++ b/boop.html
@@ -4,6 +4,7 @@
 	<title>Video</title>
 </head>
 <body>
-<video>11.mp4</video>
+<video width="300" height="200" controls  src="Frick.mp4">
+  src="11.mp4" </video>
 </body>
 </html>
