--- a/boop.html
+++ b/boop.html
@@ -4,7 +4,7 @@
 	<title>Video</title>
 </head>
 <body>
-<video width="300" height="200" controls  src="Frick.mp4">
+<video width="300" height="200" controls  src="fun.mp4">
   src="fun.mp4" </video>
 </body>
 </html>
